// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Shallow Snapshot Tests basic 1`] = `
<div
  className="card"
  style={
    Object {
      "height": undefined,
      "maxWidth": undefined,
      "width": undefined,
    }
  }
>
  text
</div>
`;

exports[`Shallow Snapshot Tests radius 1`] = `
<div
  className="card radius"
  style={
    Object {
      "height": undefined,
      "maxWidth": undefined,
      "width": undefined,
    }
  }
>
  text
</div>
`;
